GtkSpinButton value not changed on tapping the buttons
On touch screen, tapping the '+' or '-' buttons in a GtkSpinButton doesn't change its values. This was tested in widget-factory on wayland
On touch screen, tapping the '+' or '-' buttons in a GtkSpinButton doesn't change its values. This was tested in widget-factory on wayland